Addition of the CRUD operations for "Articles"
